<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="none">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
 
		<TextView
					android:id="@+id/txt_pengyouquan"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/v2"
					android:drawableRight="@drawable/right"
					android:text="@string/moments" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		 
		
		<TextView
					android:id="@+id/txt_saoyisao"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_saoyisao"
					android:drawableRight="@drawable/right"
					android:text="@string/scan" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		<TextView
					android:id="@+id/txt_yaoyiyao"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_yao"
					android:drawableRight="@drawable/right"
					android:text="@string/shake2" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		
		<TextView
					android:id="@+id/txt_nearby"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_nearby"
					android:drawableRight="@drawable/right"
					android:text="@string/people_nearby" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		<TextView
					android:id="@+id/txt_piaoliuping"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_ping"
					android:drawableRight="@drawable/right"
					android:text="@string/drift_bottle" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		
		
		<TextView
					android:id="@+id/txt_shop"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_shop"
					android:drawableRight="@drawable/right"
					android:text="@string/shopping" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		<TextView
					android:id="@+id/txt_game"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_game"
					android:drawableRight="@drawable/right"
					android:text="@string/games" />
		<View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1px" />
	 
	</LinearLayout>
	</ScrollView>
</LinearLayout>